[package]
name = "arrow_util"
version = "0.1.0"
authors = ["Andrew Lamb <andrew@nerdnetworks.org>"]
edition = "2018"
description = "Apache Arrow utilities"

[dependencies]

ahash = "0.7.2"
arrow = { path = "../arrow" }
futures = "0.3"
hashbrown = "0.11"
num-traits = "0.2"
rand = { version = "0.8.3", optional = true }
snafu = "0.6"

[dev-dependencies]
rand = "0.8.3"

[features]
fuzz = ["rand"]