[package]
name = "internal_types"
version = "0.1.0"
authors = ["Andrew Lamb <andrew@nerdnetworks.org>"]
edition = "2018"
description = "InfluxDB IOx internal types, shared between IOx instances"
readme = "README.md"

[dependencies]
arrow = { path = "../arrow" }
arrow_util = { path = "../arrow_util" }
chrono = "0.4"
hashbrown = "0.11"
influxdb_line_protocol = { path = "../influxdb_line_protocol" }
observability_deps = { path = "../observability_deps" }
snafu = "0.6"

[dev-dependencies]
arrow_util = { path = "../arrow_util" }
