[package]
name = "observability_deps"
version = "0.1.0"
authors = ["Paul Dix <paul@pauldix.net>"]
edition = "2018"
description = "Observability dependencies for instrumenting client code"

[dependencies] # In alphabetical order
opentelemetry = { version = "0.13", default-features = false, features = ["trace", "metrics", "rt-tokio"] }
opentelemetry-prometheus = "0.6"
prometheus = { version = "0.12", default-features = false }
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_debug"] }

