[package]
name = "observability_exporters"
version = "0.1.0"
authors = ["Paul Dix <paul@pauldix.net>"]
edition = "2018"
description = "Observability ecosystem dependencies for InfluxDB IOx, to ensure consistent versions and unified updates"

[dependencies] # In alphabetical order
env_logger = "0.8"
observability_deps = { path = "../observability_deps" }
opentelemetry-jaeger = { version = "0.12", features = ["tokio"] }
opentelemetry-otlp = "0.6"
tracing-opentelemetry = { version = "0.12", default-features = false }
tracing-subscriber = { version = "0.2", default-features = false, features = ["env-filter", "smallvec", "chrono", "parking_lot", "registry", "fmt", "ansi", "json"] }
